Readme updated with troubleshooting